# WanAndroid

./: .gitattributes  README.md  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle.kts  build.groovy.gradle  build.kotlin.gradle.kts  keystore-debug.jks  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: logback.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg-lib.cpp  jnidemo-lib.cpp  native-lib.cpp  opencv-lib.cpp
app/src/main/cpp/common/: common.cpp  common.h  log.h
app/src/main/cpp/src/: native-lib.cpp
app/src/main/cpp/src/utils/: log.h
app/src/main/res-camera/layout/: fragment_camera.xml  fragment_camera_basic.xml  fragment_camera_qrcode.xml
app/src/main/res-ffmpeg/layout/: fragment_avinfo.xml  fragment_ffmpeg.xml
app/src/main/res-file/layout/: fragment_file.xml  item_file.xml  item_file_nav.xml
app/src/main/res-jni/layout/: fragment_jni.xml  item_jni.xml  item_student.xml  item_student_operate.xml
app/src/main/res-opencv/layout/: fragment_blur.xml  fragment_canny.xml  fragment_erode.xml  fragment_gray.xml  fragment_idcard.xml  fragment_opencv.xml  item_opencv.xml
app/src/main/res-vxposed/layout/: fragment_app_list.xml  fragment_virtual_loading.xml  fragment_vxposed.xml  item_app_list.xml
app/src/main/res-websocket/layout/: fragment_websocket.xml
app/src/main/res/drawable/: bg_search.xml  divider.xml  ic_cancle.xml  ic_clean.xml  ic_main_home.xml  ic_main_me.xml  ic_search.xml  (+2 more)
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Dep.kt  InitApp.kt
buildSrc/src/main/resources/: build-config.properties  flavor-config.properties  signature.properties
dep/: build.gradle
lib/: build.gradle
libs/: build.gradle
mvvm/: build.gradle
shared/: build.gradle.kts
shared/src/main/: AndroidManifest.xml
vxposed/: build.gradle
wan_flutter/: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
wan_flutter/.android/: local.properties
wan_flutter/.android/Flutter/: build.gradle
wan_flutter/.android/app/: build.gradle
widget/: build.gradle
(+415 files in other folders)
